更新网站内容

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <!-- 加载指示器 -->
+    <!-- 加载指示器 -->`
     <div id="loadingIndicator" class="loading-indicator">
         <div class="spinner"></div>
         <p>加载中...</p>
