--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mir-Lunto的私人空间</title>
     <link rel="stylesheet" href="style.css">
+    <meta name="description" content="Mir-Lunto的个人空间，记录思考、项目和创作">
+    <meta name="keywords" content="个人空间,博客,项目,前端开发">
 </head>
 <body>
     <!-- 加载指示器 -->
@@ -65,14 +67,33 @@
             <section id="about" class="content-section">
                 <h2>关于 Mir-Lunto</h2>
                 <p>这里是我的个人空间，记录我的思考、项目和创作...</p>
+                <div class="personal-info">
+                    <p>热爱编程，专注于Web开发技术</p>
+                    <p>喜欢探索新技术，乐于分享学习经验</p>
+                </div>
             </section>
 
             <section id="projects" class="content-section">
                 <h2>我的项目</h2>
                 <div class="project-list">
-                    <div class="project-item">项目一</div>
-                    <div class="project-item">项目二</div>
-                    <div class="project-item">项目三</div>
+                    <div class="project-item">
+                        <h3>个人空间网站</h3>
+                        <p>当前网站，使用现代Web技术构建</p>
+                        <span class="project-tag">HTML/CSS</span>
+                        <span class="project-tag">JavaScript</span>
+                    </div>
+                    <div class="project-item">
+                        <h3>智能评论系统</h3>
+                        <p>具有完整功能的现代评论系统</p>
+                        <span class="project-tag">JavaScript</span>
+                        <span class="project-tag">LocalStorage</span>
+                    </div>
+                    <div class="project-item">
+                        <h3>视频背景优化</h3>
+                        <p>自适应视频背景播放器</p>
+                        <span class="project-tag">视频处理</span>
+                        <span class="project-tag">性能优化</span>
+                    </div>
                 </div>
             </section>
 
@@ -82,30 +103,47 @@
                     <article class="article-item" data-tags="编程 JavaScript 前端">
                         <h3>JavaScript 学习笔记</h3>
                         <p>关于 JavaScript 的一些学习心得和技巧...</p>
+                        <div class="article-meta">
+                            <span class="article-date">2024-01-15</span>
+                            <span class="article-tags">JavaScript, 编程</span>
+                        </div>
                     </article>
                     <article class="article-item" data-tags="设计 UI 用户体验">
                         <h3>现代网页设计趋势</h3>
                         <p>探讨当前网页设计的最新趋势和发展方向...</p>
+                        <div class="article-meta">
+                            <span class="article-date">2024-01-10</span>
+                            <span class="article-tags">设计, UI</span>
+                        </div>
                     </article>
                     <article class="article-item" data-tags="生活 思考 个人成长">
                         <h3>我的学习方法论</h3>
                         <p>分享我个人的学习方法和效率技巧...</p>
+                        <div class="article-meta">
+                            <span class="article-date">2024-01-05</span>
+                            <span class="article-tags">学习, 成长</span>
+                        </div>
                     </article>
                     <article class="article-item" data-tags="技术 后端 数据库">
                         <h3>数据库优化实践</h3>
                         <p>在实际项目中优化数据库性能的经验...</p>
+                        <div class="article-meta">
+                            <span class="article-date">2024-01-01</span>
+                            <span class="article-tags">数据库, 后端</span>
+                        </div>
                     </article>
                 </div>
             </section>
 
             <section id="contact" class="content-section">
                 <h2>联系我</h2>
-                <p>可以通过以下方式联系我</p>
-                <p>TEL: 1358501649</p>
-                <p>EMA: 2979661763@qq.com</p>
+                <div class="contact-info" id="contactInfo">
+                    <!-- 联系信息将通过JavaScript安全加载 -->
+                    <p>加载联系信息...</p>
+                </div>
             </section>
 
-            <!-- 新的评论系统 -->
+            <!-- 评论系统 -->
             <section class="comments-section" id="comments">
                 <div class="container">
                     <h2>💬 留言区</h2>
@@ -143,12 +181,13 @@
                             </div>
                         </form>
                     </div>
-
+                    
                     <!-- 评论列表 -->
                     <div class="comments-list" id="commentsList">
                         <div class="comments-stats">
                             <span id="commentsCount">0</span> 条留言
                             <button id="syncComments" class="sync-btn">🔄 同步数据</button>
+                            <button id="exportComments" class="export-btn">📥 导出留言</button>
                         </div>
                         
                         <div id="commentsContainer" class="comments-container">
@@ -158,6 +197,11 @@
                 </div>
             </section>
         </main>
+
+        <footer class="main-footer">
+            <p>&copy; 2024 Mir-Lunto. 保留所有权利。</p>
+            <p>最后更新: <span id="lastUpdate"></span></p>
+        </footer>
     </div>
 
     <!-- 表情选择器模态框 -->
@@ -178,6 +222,30 @@
             <div id="emojiGrid" class="emoji-grid"></div>
         </div>
     </div>
+
+    <!-- 删除确认模态框 -->
+    <div id="deleteModal" class="modal">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h3 id="deleteModalTitle">确认删除留言</h3>
+                <button id="closeDeleteModal" class="close-modal">&times;</button>
+            </div>
+            <div class="modal-body">
+                <p id="deleteConfirmText">您确定要删除这条留言吗？此操作不可撤销。</p>
+                <div class="admin-auth" id="adminAuthSection" style="display: none;">
+                    <input type="password" id="adminPassword" placeholder="管理员密码" maxlength="20">
+                    <p class="hint">请输入管理员密码以确认删除</p>
+                </div>
+            </div>
+            <div class="modal-footer">
+                <button id="cancelDelete" class="btn-secondary">取消</button>
+                <button id="confirmDelete" class="btn-danger">确认删除</button>
+            </div>
+        </div>
+    </div>
+
+    <!-- 通知容器 -->
+    <div id="notificationContainer"></div>
 
     <script src="script.js"></script>
 </body>
