--- a/index.html
+++ b/index.html
@@ -77,65 +77,15 @@
 
             <section id="projects" class="content-section">
                 <h2>我的项目</h2>
-                <div class="project-list">
-                    <div class="project-item">
-                        <h3>个人空间网站</h3>
-                        <p>当前网站，使用现代Web技术构建</p>
-                        <span class="project-tag">HTML/CSS</span>
-                        <span class="project-tag">JavaScript</span>
-                    </div>
-                    <div class="project-item">
-                        <h3>智能评论系统</h3>
-                        <p>具有完整功能的现代评论系统</p>
-                        <span class="project-tag">JavaScript</span>
-                        <span class="project-tag">Supabase</span>
-                    </div>
-                    <div class="project-item">
-                        <h3>视频背景优化</h3>
-                        <p>自适应视频背景播放器</p>
-                        <span class="project-tag">视频处理</span>
-                        <span class="project-tag">性能优化</span>
-                    </div>
-                </div>
-            </section>
-
-            <section id="articles" class="content-section">
-                <h2>我的文章</h2>
-                <div class="articles-list">
-                    <article class="article-item" data-tags="编程 JavaScript 前端">
-                        <h3>JavaScript 学习笔记</h3>
-                        <p>关于 JavaScript 的一些学习心得和技巧...</p>
-                        <div class="article-meta">
-                            <span class="article-date">2024-01-15</span>
-                            <span class="article-tags">JavaScript, 编程</span>
-                        </div>
-                    </article>
-                    <article class="article-item" data-tags="设计 UI 用户体验">
-                        <h3>现代网页设计趋势</h3>
-                        <p>探讨当前网页设计的最新趋势和发展方向...</p>
-                        <div class="article-meta">
-                            <span class="article-date">2024-01-10</span>
-                            <span class="article-tags">设计, UI</span>
-                        </div>
-                    </article>
-                    <article class="article-item" data-tags="生活 思考 个人成长">
-                        <h3>我的学习方法论</h3>
-                        <p>分享我个人的学习方法和效率技巧...</p>
-                        <div class="article-meta">
-                            <span class="article-date">2024-01-05</span>
-                            <span class="article-tags">学习, 成长</span>
-                        </div>
-                    </article>
-                    <article class="article-item" data-tags="技术 后端 数据库">
-                        <h3>数据库优化实践</h3>
-                        <p>在实际项目中优化数据库性能的经验...</p>
-                        <div class="article-meta">
-                            <span class="article-date">2024-01-01</span>
-                            <span class="article-tags">数据库, 后端</span>
-                        </div>
-                    </article>
-                </div>
-            </section>
+                <!-- 项目列表由后端渲染 -->
+                <div class="project-list" aria-live="polite"></div>
+             </section>
+ 
+             <section id="articles" class="content-section">
+                 <h2>我的文章</h2>
+                 <!-- 文章列表由后端渲染 -->
+                 <div class="articles-list" aria-live="polite"></div>
+             </section>
 
             <section id="contact" class="content-section">
                 <h2>联系我</h2>
@@ -307,6 +257,26 @@
             <button id="exportCommentsAdmin" class="emoji-btn" style="flex: 1;">📥 导出数据</button>
             <button id="refreshStats" class="emoji-btn" style="flex: 1;">🔄 刷新统计</button>
         </div>
+    </div>
+
+    <!-- CMS 弹窗 DOM -->
+    <div id="cmsModal" class="cms-modal" aria-hidden="true" role="dialog" aria-modal="true">
+      <div class="cms-modal-content glass">
+        <div class="cms-modal-header">
+          <h3 id="cmsModalTitle">查看</h3>
+          <button id="cmsModalClose" class="close-modal" aria-label="关闭">&times;</button>
+        </div>
+        <div class="cms-modal-body">
+          <input id="cmsFieldTitle" class="cms-input" placeholder="标题" />
+          <input id="cmsFieldTags" class="cms-input" placeholder="标签 (逗号分隔)" />
+          <textarea id="cmsFieldBody" class="cms-textarea" placeholder="内容"></textarea>
+          <label class="cms-row"><input type="checkbox" id="cmsFieldPublished" /> 已发布（可见于前端）</label>
+        </div>
+        <div class="cms-modal-footer">
+          <button id="cmsSaveBtn" class="submit-btn">保存</button>
+          <button id="cmsCloseBtn" class="btn-secondary">关闭</button>
+        </div>
+      </div>
     </div>
 
     <!-- 通知容器 -->
